# ccca-python

./: Makefile  create.sql  pyproject.toml
src/: account_dao.py  api.py  get_account.py  main.py  signup.py  user.py  validate_cpf.py
src/application/use_cases/: accept_ride.py  finish_ride.py  get_account.py  get_ride.py  process_payment.py  request_ride.py  signup.py  start_ride.py  update_position.py
src/domain/: account.py  car_plate.py  coord.py  cpf.py  email.py  name.py  ride.py
src/domain/entities/: account.py  position.py  ride.py
src/domain/factories/: account_factory.py  position_factory.py  ride_factory.py
src/domain/services/: distance_calculator.py
src/domain/value_objects/: password.py  ride_status.py
src/infra/controllers/: account_controller.py
src/infra/database/: database_connection.py
src/infra/di/: registry.py
src/infra/gateways/: mailer_gateway.py
src/infra/http/: http_server.py
src/infra/mediator/: mediator.py
src/infra/repositories/: account_repository.py  position_repository.py  ride_repository.py
tests/: conftest.py  test_signup.py  test_validate_cpf.py
tests/application/: test_accept_ride.py  test_finish_ride.py  test_request_ride.py  test_signup.py  test_start_ride.py  test_update_position.py
tests/domain/: test_account.py  test_car_plate.py  test_coord.py  test_cpf.py  test_email.py  test_name.py  test_ride_status.py
