[project]
name = "driver-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "dependency-injector>=4.42.0",
    "flask>=3.0.3",
    "psycopg>=3.2.1",
    "python-decouple>=3.8",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "testcontainers>=4.8.1",
]


[tool.ruff]
line-length = 100
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W']

[tool.ruff.format]
preview = true
quote-style = 'single'
